src/main/resources/api/examples/errors/error-example-400.raml
#%RAML 1.0 NamedExample
values:
  message: Bad Request